--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -46,28 +45,40 @@
     <!-- Grid Menu -->
     <div class="grid-menu">
         <div class="menu-item">
-            <img src="images/Bus Ticket.png" alt="Bus Ticket" style="width: 100%; height: auto;">
-            <div style="margin-top: 5px; text-align: center;">Bus Ticket</div>
+            <button style="border: none; background: none; padding: 0;">
+                <img src="images/Bus Ticket.png" alt="Bus Ticket" style="width: 100%; height: auto;">
+                <div style="margin-top: 5px; text-align: center;">Bus Ticket</div>
+            </button>
         </div>
         <div class="menu-item">
-            <img src="images/Daily Pass.png" alt="Daily Pass" style="width: 100%; height: auto;">
-            <div style="margin-top: 5px; text-align: center;">Daily Pass</div>
+            <button style="border: none; background: none; padding: 0;">
+                <img src="images/Daily Pass.png" alt="Daily Pass" style="width: 100%; height: auto;">
+                <div style="margin-top: 5px; text-align: center;">Daily Pass</div>
+            </button>
         </div>
         <div class="menu-item">
-            <img src="images/View Ticket.png" alt="View Ticket" style="width: 100%; height: auto;">
-            <div style="margin-top: 5px; text-align: center;">View Ticket</div>
+            <button style="border: none; background: none; padding: 0;">
+                <img src="images/View Ticket.png" alt="View Ticket" style="width: 100%; height: auto;">
+                <div style="margin-top: 5px; text-align: center;">View Ticket</div>
+            </button>
         </div>
         <div class="menu-item">
-            <img src="images/View Pass.png" alt="View Pass" style="width: 100%; height: auto;">
-            <div style="margin-top: 5px; text-align: center;">View Pass</div>
+            <button style="border: none; background: none; padding: 0;">
+                <img src="images/View Pass.png" alt="View Pass" style="width: 100%; height: auto;">
+                <div style="margin-top: 5px; text-align: center;">View Pass</div>
+            </button>
         </div>
         <div class="menu-item">
-            <img src="images/Route Timetable.png" alt="Route Timetable" style="width: 100%; height: auto;">
-            <div style="margin-top: 5px; text-align: center;">Route Timetable</div>
+            <button style="border: none; background: none; padding: 0;">
+                <img src="images/Route Timetable.png" alt="Route Timetable" style="width: 100%; height: auto;">
+                <div style="margin-top: 5px; text-align: center;">Route Timetable</div>
+            </button>
         </div>
         <div class="menu-item">
-            <img src="images/Metro Ticket.png" alt="Metro Ticket" style="width: 100%; height: auto;">
-            <div style="margin-top: 5px; text-align: center;">Metro Ticket</div>
+            <button style="border: none; background: none; padding: 0;">
+                <img src="images/Metro Ticket.png" alt="Metro Ticket" style="width: 100%; height: auto;">
+                <div style="margin-top: 5px; text-align: center;">Metro Ticket</div>
+            </button>
         </div>
     </div>
 
@@ -81,16 +92,22 @@
     <!-- Bottom Navigation -->
     <div class="bottom-nav">
         <div class="bottom-nav-item">
-            <img src="images/home-icon.png" alt="Home" style="width: 100%; height: auto;">
-            <div style="margin-top: 5px; text-align: center;">Home</div>
+            <button style="border: none; background: none; padding: 0;">
+                <img src="images/home-icon.png" alt="Home" style="width: 100%; height: auto;">
+                <div style="margin-top: 5px; text-align: center;">Home</div>
+            </button>
         </div>
         <div class="bottom-nav-item">
-            <img src="images/buses-icon.png" alt="Buses" style="width: 100%; height: auto;">
-            <div style="margin-top: 5px; text-align: center;">Buses</div>
+            <button style="border: none; background: none; padding: 0;">
+                <img src="images/buses-icon.png" alt="Buses" style="width: 100%; height: auto;">
+                <div style="margin-top: 5px; text-align: center;">Buses</div>
+            </button>
         </div>
         <div class="bottom-nav-item">
-            <img src="images/help-icon.png" alt="Help" style="width: 100%; height: auto;">
-            <div style="margin-top: 5px; text-align: center;">Help</div>
+            <button style="border: none; background: none; padding: 0;">
+                <img src="images/help-icon.png" alt="Help" style="width: 100%; height: auto;">
+                <div style="margin-top: 5px; text-align: center;">Help</div>
+            </button>
         </div>
     </div>
 
